--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,115 @@
  *= require_tree .
  *= require_self
  */
+
+:root {
+  --base-color: #f3f3f3;
+  --text-color: #0c0c0c;
+  --primary-color: #DCE6E6;
+  --secondary-color: #E6EFDF;
+  --tertiary-color: #EFE1D1;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  color: var(--text-color);
+}
+
+header, h1, nav, .list-comment {
+  font-family: 'Kaushan', cursive, sans-serif;
+}
+
+header {
+  width: 100%;
+  height: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--primary-color);
+}
+
+header .headline {
+  width: 100%;
+  text-align: center;
+  border-top: solid 5px #132847;
+  margin-top: 15px;
+  font-size: 32px;
+  line-height: 2;
+}
+
+nav {
+  width: 100%;
+  margin: 0 auto;
+  border-top: solid 0.7px #132847;
+  border-bottom: solid 0.7px #132847;
+}
+
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+}
+
+main {
+  width: 100%;
+  max-width: 880px;
+  margin: 0 auto;
+  padding: 1rem;
+  background-color: var(--base-color);
+}
+
+.list-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.list-box {
+  width: 200px;
+  height: 250px;
+  margin: 10px;
+  position: relative;
+}
+
+.list-comment {
+  width: 200px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.list-body {
+  display: block;
+  color: gray;
+  font-size: 12px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;}
+
+.list-title {
+  display: block;  font-size: 18px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+footer {
+  display: grid;
+  place-items: center;
+  height: 96px;
+  background-color: var(--secondary-color);
+}
