--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,15 +1,19 @@
 <h2>投稿一覧</h2>
 
-<% @lists.each do |list| %>
-  <p>タイトル</p>
-  <span>
-    <%= link_to list.title, list_path(list.id) %>
-  </span>
+<% if @lists.all.count == 0 %>
+  <p>投稿がありません</p>
+<% else %>
+  <% @lists.each do |list| %>
+    <p>タイトル</p>
+    <span>
+      <%= link_to list.title, list_path(list.id) %>
+    </span>
 
-  <p>画像</p>
-  <% if list.image.attached? %>
-    <%= image_tag list.image, size: "200x200" %>
-  <% else %>
-    <%= image_tag 'no_image', size: "200x200" %>
+    <p>画像</p>
+    <% if list.image.attached? %>
+      <%= image_tag list.image, size: "200x200" %>
+    <% else %>
+      <%= image_tag 'no_image', size: "200x200" %>
+    <% end %>
   <% end %>
 <% end %>
