--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,14 +1,36 @@
-<h2>投稿一覧</h2>
+<h2>投稿</h2>
 
-<%= form_with model: List.new do |f| %>
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
 
-  <h4>本文</h4>
-  <%= f.text_area :body %>
-
-  <h4>画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-
-  <%= f.submit "投稿" %>
+<% if @list.errors.any? %>
+  <%= @list.errors.count %>件のエラーが発生しました。
 <% end %>
+
+<div class="form-container">
+  <%= form_with model: List.new do |f| %>
+    <fieldset>
+      <% if @list.errors[:title].any? %>
+        <p class="error-message">タイトルを入力してください</p>
+      <% end %>
+      <h4>タイトル</h4>
+      <%= f.text_field :title %>
+    </fieldset>
+
+    <fieldset>
+      <% if @list.errors[:body].any? %>
+        <p class="error-message">本文を入力してください</p>
+      <% end %>
+      <h4>本文</h4>
+      <%= f.text_area :body %>
+    </fieldset>
+
+    <fieldset>
+      <% if @list.errors[:image].any? %>
+        <p class="error-message">画像を選択してください</p>
+      <% end %>
+      <h4>画像</h4>
+      <%= f.file_field :image, accept: "image/*" %>
+    </fieldset>
+
+    <%= f.submit "投稿" %>
+  <% end %>
+</div>
